# wordlift-gemini-cli-extension

./: .env.example  .gitignore  CHANGELOG.md  GEMINI.md  INSTALL.md  LICENSE  README.md  RELEASE_NOTES.md  gemini-extension.json  install.sh  pyproject.toml  requirements.txt  server.py
references/: graphql_queries.md  scheduling.md  workflows.md
scripts/: dry_run_test.py  entity_builder.py  entity_upgrader.py  id_generator.py
skills/wordlift-kg-builder/: SKILL.md
skills/wordlift-kg-builder/assets/: product_template.json
skills/wordlift-kg-builder/references/: entity-upgrading.md  iri-patterns-and-verification.md  scheduling.md  template-configuration.md
skills/wordlift-kg-builder/scripts/: entity_reuse.py  entity_upgrader.py  entity_verifier.py  id_generator.py  kg_sync.py  template_configurator.py  test_endpoint.py  wordlift_client.py
skills/wordlift-kg-builder/wl_extension/: __init__.py  entity_builder.py  entity_reuse.py  markup_validator.py  shacl_validator.py  template_configurator.py
wl_extension/: entity_upgrader.py  extract_product.py  kg_sync.py
